--- a/style.css
+++ b/style.css
@@ -1,3 +1,34 @@
 body {
-    background-color: bisque;
+    background-color: white;
+}
+
+#website {
+    max-width: 1000px;
+    margin: 0 auto;
+}
+
+#header {
+    display: grid;
+    grid-template-columns: auto 1fr;
+    align-items: center;
+    background-color: brown;
+}
+
+.logo {
+    color: white;
+    text-decoration: none;
+}
+
+.menu {
+    text-align: right;
+}
+
+.menu li {
+    display: inline-block;
+    padding: 5px;
+}
+
+.menu li a {
+    color: white;
+    text-decoration: none;
 }
