--- a/style.css
+++ b/style.css
@@ -5,18 +5,23 @@ body {
 #website {
     max-width: 1000px;
     margin: 0 auto;
+    font-family: Arial;
 }
 
 #header {
     display: grid;
     grid-template-columns: auto 1fr;
     align-items: center;
-    background-color: brown;
+    background-color: #ddd;
+    color: black;
+    padding-right: 15px;
+    padding-left: 15px;
 }
 
 .logo {
-    color: white;
+    color: black;
     text-decoration: none;
+    font-size: 25px;
 }
 
 .menu {
@@ -29,6 +34,10 @@ body {
 }
 
 .menu li a {
-    color: white;
+    color: black;
     text-decoration: none;
+}
+
+.banner {
+    background-color: red;
 }
