--- a/style.css
+++ b/style.css
@@ -1,5 +1,18 @@
 body {
-    background-color: white;
+    background-color: black;
+    background: url(/url);
+}
+
+.bg {
+    background: url(img/);
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    opacity: .6;
 }
 
 #website {
@@ -38,6 +51,19 @@ body {
     text-decoration: none;
 }
 
-.banner {
-    background-color: red;
+.baner {
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    padding: 30px 0;
+  }
+
+.baner h1 {
+  color: white;
+  font-size: 60px;
+  width: 60%;
 }
+
+.baner h2 {
+    color: white;
+    font-size: 30px;
+    width: 70%;
+  }
