--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ nav ul {
 .banner {
     width: 100%;
     height: 500px;
-    background-image: url(img/pozadi.jpeg);
+    background-image: url('img/pozadi.jpeg');
     background-size: cover;
     background-position: center;
 }
