--- a/style.css
+++ b/style.css
@@ -44,6 +44,7 @@ nav ul {
 .banner-text h1 {
     font-size: 48px;
     font-weight: bold;   
+    text-shadow: #FC0 1px 0 10px;
 }
 
 .banner-text p {
@@ -55,6 +56,8 @@ h1,h2,h3,h4,h5,h6 {
     font-optical-sizing: auto;
     font-weight: 700;
     font-style: normal;
+    text-shadow: 1px 1px 2px rgb(109, 109, 109);
+    
 }
 
 p {
