--- a/style.css
+++ b/style.css
@@ -67,3 +67,28 @@ p {
     font-style: normal;
 }
 
+.features {
+    display: grid;
+    grid-template-columns: ;
+}
+
+.feature {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 30px;
+}
+
+.feature-head {
+    display: flex;
+    align-items: center;
+}
+
+.feature-head svg {
+    margin-right: 10px;
+
+}
+
+.feature-head h3 {
+    margin: 0;
+}
