--- a/style.css
+++ b/style.css
@@ -87,6 +87,7 @@ nav ul li a:hover {
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     gap: 20px;
     margin-top: 40px;
+
 }
 
 .feature {
@@ -214,5 +215,7 @@ footer {
 }
 
 .block-reverse {
+    display: flex;
     flex-direction: row-reverse;
+    
 }
