--- a/style.css
+++ b/style.css
@@ -144,44 +144,6 @@ nav ul li a:hover {
     padding: 30px;
 }
 
-footer {
-    background: white;
-    color: #007BFF;
-    text-align: center;
-    padding: 20px 0;
-    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
-}
-
-.footer-container {
-    max-width: 1200px;
-    margin: auto;
-}
-
-.footer-links a, .footer-social a {
-    margin: 0 10px;
-    font-size: 18px;
-    text-decoration: none;
-    color: var(--primary-color);
-    font-weight: bold;
-    transition: color 0.3s ease;
-}
-
-.footer-social a {
-    font-size: 22px;
-}
-
-.footer-links a:hover, .footer-social a:hover {
-    color: var(--secondary-color);
-}
-
-.footer-social a i {
-    transition: transform 0.3s ease;
-}
-
-.footer-social a:hover i {
-    transform: scale(1.2);
-}
-
 .container {
     display: flex;
     flex-direction: column;
@@ -218,4 +180,37 @@ footer {
     display: flex;
     flex-direction: row-reverse;
     
+}
+
+* {
+    margin: 0;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+a {
+    color: var(--text-color);
+    text-decoration: none;
+}
+
+.footer {
+    display: flex;
+    justify-content: space-around;
+    padding: 20px;
+    background-color: #f0f0f0;
+}
+
+.footer h3 {
+    margin-bottom: 20px;
+    color: var(--primary-color);
+}
+
+.footer-block {
+    line-height: 1,5;
+    padding: 10px 0;
+    color: var(--text-color);
+    
+}
+
+.my-map {
+    border: 1px solid #999;
 }
