--- a/style.css
+++ b/style.css
@@ -196,7 +196,9 @@ a {
     display: flex;
     justify-content: space-around;
     padding: 20px;
-    background-color: #f0f0f0;
+    background: white;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+    text-align: center;
 }
 
 .footer h3 {
@@ -207,10 +209,9 @@ a {
 .footer-block {
     line-height: 1,5;
     padding: 10px 0;
-    color: var(--text-color);
-    
+    color: var(--text-color);  
 }
 
 .my-map {
-    border: 1px solid #999;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
 }
