--- a/style.css
+++ b/style.css
@@ -192,3 +192,11 @@ a {
 .my-map {
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
 }
+
+.callta {
+    text-align: center;
+    display: flex;
+    padding: 20px;
+    background-color: white;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+}
