--- a/style.css
+++ b/style.css
@@ -139,6 +139,8 @@ nav ul li a:hover {
     gap: 100px;
     background-color: white;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+    transition: all 0.5s;
+    color: var(--text-color);
 }
 
 .container-img {
@@ -162,6 +164,8 @@ nav ul li a:hover {
     gap: 100px;
     background-color: white;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+    transition: all 0.5s;
+    color: var(--text-color);
 }
 
 .container button {
@@ -177,6 +181,16 @@ nav ul li a:hover {
 }
 
 button:hover {
+    transition: all 0.5s;
+    transform: scale(1.05);
+}
+
+.container:hover {
+    transform: scale(1.05);
+    transition: all 0.5s;
+}
+
+.container-reverse:hover {
     transition: all 0.5s;
     transform: scale(1.05);
 }
@@ -248,3 +262,6 @@ a {
     color: var(--text-color);  
 }
 
+html {
+    scroll-behavior: smooth;
+}
