--- a/style.css
+++ b/style.css
@@ -123,11 +123,6 @@ nav ul li a:hover {
     color: var(--primary-color);
 }
 
-.cta {
-    text-align: center;
-    padding: 30px;
-}
-
 .container {
     margin: 0 auto;
     padding: 20px;
@@ -180,7 +175,12 @@ nav ul li a:hover {
     transition: 0.1s;
 }
 
-button:hover {
+.button:hover {
+    transition: all 0.5s;
+    transform: scale(1.05);
+}
+
+.button-reverse:hover {
     transition: all 0.5s;
     transform: scale(1.05);
 }
@@ -264,4 +264,51 @@ a {
 
 html {
     scroll-behavior: smooth;
+}
+
+.cta {
+    text-align: center;
+    padding: 30px 0px;
+}
+.theme-primary {
+    background-color: var(--primary-color);
+    color: white;
+}
+
+.theme-primary .btn {
+    background-color: white;
+    color: var(--primary-color);
+}
+.btn {
+    background-color: var(--bg-color);
+    color: var(--primary-color);
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 16px;
+    font-weight: bold;
+    transition: all 0.5s;
+}
+
+.btn:hover {
+    transform: scale(1.1);
+    
+}
+
+.theme-primary h2 {
+    font-size: 30px;
+}
+
+.services-text {
+    text-align: center;
+}
+
+.services-text h2 {
+    font-weight: 800;
+    font-size: 32px;
+}
+
+.services-text p {
+    font-size: 20px;
 }
