--- a/style.css
+++ b/style.css
@@ -84,12 +84,27 @@ nav ul li a:hover {
     margin: 10px 0 0;
 }
 
+@media (max-width: 768px) {
+    .banner-text h1 {
+        font-size: 28px;
+    }
+    .banner-text p {
+        font-size: 16px;
+    }
+}
+
 .features {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     gap: 20px;
     margin-top: 40px;
 
+}
+
+@media (max-width: 768px) {
+    .features {
+        grid-template-columns: 1fr;
+    }
 }
 
 .feature {
@@ -215,6 +230,20 @@ nav ul li a:hover {
     line-height: 1.6rem;
 }
 
+@media (max-width: 768px) {
+    .container-img {
+        flex-direction: column;
+    }
+    .container {
+    flex-direction: column;
+    width: 85%;
+    }
+    .container-reverse{
+    flex-direction: column;
+    width: 85%;
+    }
+}
+
 * {
     margin: 0;
     font-family: Arial, Helvetica, sans-serif;
@@ -311,4 +340,11 @@ html {
 
 .services-text p {
     font-size: 20px;
+}
+
+@media (max-width: 768px) {
+    .footer{
+    flex-direction: column;
+    
+    }
 }
